Validation of pipeline against past runs
* strelka, varscan run and parsing match past runs exactly using old dbSnP
* automated testing added in test.concordance

--- a/MGI/README
+++ b/MGI/README
@@ -106,3 +106,5 @@ Key files:
 Example of running arbitrary command in container:
 
 bash submit_adhoc.sh "cd /gscuser/mwyczalk/projects/SomaticWrapper/somaticwrapper/image.setup/B_Filter; /bin/bash ./3b_make_variant_filter_GRCh38.sh"
+
+NOTE: this is very ad hoc, and needs further work.  In particular, runtime and log directories should go in data directory
